--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <title>Martello WebApp</title>
@@ -118,10 +118,8 @@
 </section>
 
 <footer id="footer" class="bg-secondary">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-12"><p class="my-3 text-white">&copy; 2019 Mike Martello</p></div>
-        </div>
+    <div class="container">
+        <p class="my-3 text-white">&copy; 2019 Mike Martello</p>
     </div>
 </footer>
 
