testing return object

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         xhr.onreadystatechange = () => {
             if (xhr.readyState === 4 && xhr.status === 200 ) {
                 let data = JSON.parse(xhr.responseText);
-                myFunction(data);
+                return myFunction(data);
             }
         }
         xhr.send(null);
